# Anno1800

./: .gitattributes  .gitignore
.github/workflows/: deploy.yml  vsix-release.yml
Docs/: observablehq.config.js  package-lock.json
Docs/src/: index.md
Docs/src/Assets/: Properties.md  Texts.md  snippets.md
Docs/src/Models/: cfg.md
Docs/src/basics/: copyright.md  installing.md  path.md  programs.md  startup.md
Docs/src/tutorials/: Festivals.md  MapFertilities.md  sounds.md
ModIO-Hidden/Anno1800DeadSpace/: modinfo.json
ModIO-Hidden/Anno1800Duck/: modinfo.json
ModIO-Hidden/Anno1800PreLoadLua/: modinfo.json
ModIO-Hidden/Anno1800RemoveStuff/: modinfo.json
ModIO-Hidden/Anno1800StopBillionaire/: modinfo.json
ModIO-Hidden/Anno1800TicketFeras/: modinfo.json
ModIO-Public/Anno1800AzurLaneShipNames/: modinfo.json
Non-ModIO/Anno1800PythonAPI/: AnnoPythonAPITool.sln
RDAExplorer/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
RDAExplorer/src/: App.css  App.tsx  index copy.html  index.html  main.tsx
RDAExplorer/src-tauri/: 2  Cargo.toml  tauri.conf.json
RDAExplorer/src-tauri/capabilities/: default.json
RDAExplorer/src-tauri/src/: lib.rs  main.rs
RDAExplorer/src-tauri/src/rdaReader/: constants.rs  helper.rs  mod.rs  readme.md  structure copy.rs.bak  structure.rs  types.rs
RDAExplorer/src-tauri/src/utils/: mod.rs  tree.rs  tree.rs.bak  tree.rs2.bak
RdaExplorer-Svelte/: components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
RdaExplorer-Svelte/src/: app.css  app.html
RdaExplorer-Svelte/src-tauri/: Cargo.toml  tauri.conf.json
(+90 files in other folders)
