[package]
name = "rdaexplorer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
#name = "rdaexplorer_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tokio = "1.48.0"
byteorder = "1.5.0"
flate2 = "1.1.5"
futures = "0.3.31"

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
codegen-units = 8           # Reduce parallel generator units to maximize optimization

[profile.release]
opt-level = "z"       # Optimize for the smallest binary size
lto = true             # Enable Link Time Optimization (cross-crate dead code removal)
codegen-units = 1      # Reduce parallel generator units to maximize optimization
panic = "abort"        # Remove stack unwinding code (saves ~0.5-1MB)
strip = true           # Automatically strip symbols and debug info
